# bakge

./: .gitignore  AUTHORS  BUILD  BUILD.txt  CMakeLists.txt  CONTRIBUTE  CONTRIBUTE.md  DESIGN  DIAGRAMS.md  Doxyfile.in  LICENSE  Makefile  PRONUNCIATION  README  README.md  STYLE  STYLE.md  git-changelog
cmake/: BuildEnet.cmake  BuildGLEW.cmake  BuildGLFW.cmake  BuildLua.cmake  BuildPhysFS.cmake  FindSSE.cmake  GetBullet.cmake  GetEnet.cmake  GetGLEW.cmake  GetGLFW.cmake  GetLua.cmake  GetOpenAL.cmake  GetPhysFS.cmake
cmake/Modules/: FindCocoa.cmake
doc/: Bindable.md  Engine.md  Renderer.md  Types.md  bindable.txt  changelog.dox  engine.txt  mainpage.dox  renderer.txt  shaderlibrary.dox
doc/tutorial/: HelloBakge.md
engine/: CMakeLists.txt
engine/include/bakge/gdk/engine/: Application.h  Bindings.h  Common.h  GDKEngine.h  GUI.h  GameEngine.h
engine/src/gdk/engine/: Application.cpp  Bindings.cpp  GDKEngine.cpp  GUI.cpp  GameEngine.cpp  main.cpp
example/: CMakeLists.txt  README
example/EngineAsEventHandler/: CMakeLists.txt  EngineAsEventHandler.cpp  EngineAsEventHandler.h  main.cpp
example/SimpleEngine/: CMakeLists.txt  SimpleEngine.cpp  SimpleEngine.h  main.cpp
example/VisualGamePad/: CMakeLists.txt  VisualGamePad.cpp  VisualGamePad.h  main.cpp
gdk/: CMakeLists.txt
gdk/engine/: CMakeLists.txt  README
gdk/engine/include/bakge/: GDKEngine.h
gdk/engine/include/bakge/gdk/: GameEngine.h
gdk/engine/src/: GameEngine.cpp  main.cpp
include/bakge/: Bakge.h
include/bakge/api/: Mutex.h  Packet.h  README  Socket.h  Thread.h  Window.h
include/bakge/audio/: AudioContext.h  Environment.h  Source.h  Stream.h
include/bakge/bindings/lua/: Common.h
include/bakge/core/: Bindable.h  Drawable.h  Engine.h  Event.h  EventHandler.h  Input.h  README  Renderer.h  Texture.h  Type.h  Utility.h  Window.h
include/bakge/data/: Decode.h  File.h  Format.h  LinkedList.h  SingleNode.h
include/bakge/engine/: ScriptedEngine.h  TestEngine.h
include/bakge/graphics/: Camera.h  Camera2D.h  Camera3D.h  Crowd.h  Font.h  Geometry.h  Mesh.h  Node.h  Pawn.h  Shader.h  ShaderLibrary.h  ShaderProgram.h  Shape.h  Texture.h
include/bakge/graphics/geometries/: BezierCurve.h  Grid.h  Line.h  LineStrip.h
include/bakge/graphics/geometry/: BezierCurve.h
include/bakge/graphics/shapes/: Cone.h  Cube.h  Cylinder.h  Rectangle.h  Sphere.h
include/bakge/graphics/text/: Stamp.h  (+2 more)
include/bakge/input/: GamePad.h  XBoxController.h  XboxController.h
include/bakge/internal/: Debug.h  Format.h  Graphics.h
include/bakge/math/: Math.h  Matrix.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h
include/bakge/mutex/: osx_Mutex.h  win32_Mutex.h  x11_Mutex.h
include/bakge/network/: Packet.h  Remote.h
include/bakge/packet/: osx_Packet.h  win32_Packet.h  x11_Packet.h
include/bakge/platform/: osx.h  osx_Bakge.h  win32.h  win32_Bakge.h  x11.h  x11_Bakge.h
include/bakge/renderer/: DeferredGeometryRenderer.h  DeferredLightingRenderer.h  FrontRenderer.h
include/bakge/socket/: osx_Socket.h  win32_Socket.h  x11_Socket.h
include/bakge/system/: Clock.h  Device.h
include/bakge/thread/: osx_Thread.h  win32_Thread.h  x11_Thread.h
include/bakge/ui/: Anchor.h  Clickable.h  Container.h  Draggable.h  Frame.h  Hoverable.h  Resizable.h  UIClickable.h  UIContainer.h  UIDraggable.h  UIElement.h  UIHoverable.h  UIResizable.h
include/bakge/window/: osx_Window.h  win32_Window.h  x11_Window.h
include/bakge_internal/: Debug.h  Utility.h
lib/: CMakeLists.txt  Makefile  README
script/: README  export_test_suite.pl
script/blender/: export_bmf_100.py
spec/: README.md  bmf-v1.0.0.md
src/: CMakeLists.txt
src/api/: Mutex.cpp  Packet.cpp  Socket.cpp  Thread.cpp  Window.cpp
src/audio/: AudioContext.cpp  Environment.cpp  Source.cpp  Stream.cpp
src/bindings/lua/: Common.cpp
src/clock/: osx_Clock.mm  win32_Clock.cpp  x11_Clock.cpp
src/core/: Bindable.cpp  Drawable.cpp  Engine.cpp  Event.cpp  EventHandler.cpp  Renderer.cpp  Texture.cpp  Utility.cpp  Window.cpp  osx_Utility.mm  x11_Utility.cpp
src/data/: Decode.cpp  File.cpp  LinkedList.cpp  SingleNode.cpp
src/engine/: ScriptedEngine.cpp  TestEngine.cpp
src/graphics/: Camera.cpp  Camera2D.cpp  Camera3D.cpp  Crowd.cpp  Font.cpp  Geometry.cpp  Mesh.cpp  Node.cpp  Pawn.cpp  Shader.cpp  ShaderProgram.cpp  Shape.cpp  Texture.cpp
src/graphics/geometries/: BezierCurve.cpp  Grid.cpp  Line.cpp  LineStrip.cpp
src/graphics/geometry/: BezierCurve.cpp
src/graphics/shapes/: Cone.cpp  Cube.cpp  Cylinder.cpp  Rectangle.cpp  Sphere.cpp
src/graphics/text/: GlyphLibrary.cpp  GlyphMap.cpp  Stamp.cpp
src/graphics/textures/: CompositeTexture.cpp
src/input/: GamePad.cpp
src/internal/: Debug.cpp  Utility.cpp
src/math/: Matrix.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/mutex/: osx_Mutex.mm  win32_Mutex.cpp  x11_Mutex.cpp
src/network/: Packet.cpp  Remote.cpp
src/packet/: osx_Packet.mm  win32_Packet.cpp  x11_Packet.cpp
src/renderer/: DeferredGeometryRenderer.cpp  DeferredLightingRenderer.cpp  FrontRenderer.cpp
src/socket/: osx_Socket.mm  win32_Socket.cpp  x11_Socket.cpp
src/system/: Device.cpp  osx_Clock.mm  x11_Clock.cpp
src/thread/: osx_Thread.mm  win32_Thread.cpp  x11_Thread.cpp
src/ui/: Anchor.cpp  Clickable.cpp  Container.cpp  Draggable.cpp  Frame.cpp  Hoverable.cpp  Resizable.cpp  UIClickable.cpp  UIContainer.cpp  UIDraggable.cpp  UIElement.cpp  UIHoverable.cpp  UIResizable.cpp
src/utility/: osx_Utility.mm  win32_Utility.cpp  x11_Utility.cpp
src/window/: osx_Window.mm  win32_Window.cpp  x11_Window.cpp
test/: CMakeLists.txt  Makefile  README  SimpleEngine.cpp  TestEngine.h  audio.cpp  bezier.cpp  bullet.cpp  client.cpp  clock.cpp  compositetexture.cpp  cone.cpp  crowd.cpp  cube.cpp  cylinder.cpp  device.cpp  dummy.cpp  enet.cpp  font.cpp  frontrenderer.cpp  gamepad.cpp  glfw.cpp  grid.cpp  info.cpp  linkedlist.cpp  loadfile.cpp  matrix.cpp  minlua.cpp  node.cpp  pawn.cpp  quaternion.cpp  rectangle.cpp  server.cpp  shaderprogram.cpp  shapestest.cpp  sharedcontext.cpp  sphere.cpp  texture.cpp  thread.cpp  types.cpp  (+7 more)
(+1 files in other folders)
